fix: Correct vercel.json frontend asset path

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,6 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api" },
-    { "src": "/(.*)", "dest": "/client/index.html" }
+    { "src": "/(.*)", "dest": "/dist/public/index.html" }
   ]
 }
