fix: Simplify vercel.json for Vite routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "framework": "vite",
   "build": {
     "env": {
       "NODE_ENV": "production"
@@ -6,9 +7,5 @@
   },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api" },
-    { "src": "/(.*)", "dest": "/dist/public/index.html" }
   ]
 }
