--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public",
   "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs@18.x"
+    "api/**/*.ts": {
+      "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
