--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public",
   "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs18.x"
-    }
+    "api/**/*.ts": {}
   },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" }
