--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,9 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public",
   "functions": {
-    "api/**/*.ts": {}
+    "api/**/*.ts": {
+      "maxDuration": 10
+    }
   },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" }
