fix: Explicitly bundle API with esbuild for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "framework": "vite",
   "installCommand": "npm install",
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build-vercel",
   "outputDirectory": "dist/public",
   "functions": {
     "api/**/*.ts": {
