--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development PORT=8988 tsx server/index.ts",
     "build": "vite build",
+    "build-vercel": "vite build && esbuild api/index.ts --bundle --platform=node --outfile=api/index.js",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
